[12.28] 기본 가입/로그인
[12.28] 기본 가입/로그인

--- a/client/src/assets/css/section/join.css
+++ b/client/src/assets/css/section/join.css
@@ -27,6 +27,7 @@
     display: block;
     font-size: 1rem;
     font-weight: 600;
+    margin-bottom: 0.5rem;
 }
 
 .join__label em {
@@ -49,10 +50,10 @@
     font-size: 1rem;
 }
 
-.join__inputInner:first-of-type input {
+/* .join__inputInner:first-of-type input {
     margin-right: 31px;
-    width: 66%;
-}
+    width: 100%;
+} */
 
 .join__inputInner .check__btn {
     border-radius: 10px;
@@ -175,4 +176,17 @@
     font-size: 1rem;
     font-weight: 400;
     margin-bottom: 44px;
+}
+
+/* ---------------------------------------------------------- */
+
+.join__form .nameInfo {
+    display: inline-block;
+    font-size: 0.7rem;
+    color: green;
+    margin-bottom: 0;
+}
+
+.join__form .nameInfo.invalid {
+    color: red;
 }
