--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -4,6 +4,7 @@
 @import "section/list.css";
 @import "section/footer.css";
 @import "section/join.css";
+@import "section/community.css";
 
 
 /* setting */
