[12.28] 커뮤,마이페이지 연결 및 수정중
[12.28] 커뮤,마이페이지 연결 및 수정중

--- a/client/src/assets/css/section/header.css
+++ b/client/src/assets/css/section/header.css
@@ -82,14 +82,13 @@
     letter-spacing: 1px;
     transition: color 0.2s ease;
     position: relative;
-
 }
 
 .header_item .header__nav ul li:hover ::after {
     color: #000;
 }
 
-.header_item .header__nav ul li.active a {
+.header_item .header__nav ul .active {
     font-weight: 500;
 }
 
