--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -5,6 +5,7 @@
 @import "section/footer.css";
 @import "section/join.css";
 @import "section/community.css";
+@import "section/mypage.css";
 
 
 /* setting */
