--- a/client/src/assets/css/section/slide.css
+++ b/client/src/assets/css/section/slide.css
@@ -20,7 +20,7 @@
 }
 
 .swiper-pagination-bullet {
-    background-color: var(--white);
+    background-color: var(--main-color);
 }
 
 @media (max-width: 1280px) {
