사진 삭제 버튼을 추가할 수가 없어 ㅠ

--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -4,7 +4,7 @@
 @import "section/list.css";
 @import "section/footer.css";
 @import "section/join.css";
-@import "section/community.css";
+@import "section/communityWrite.css";
 
 
 /* setting */
