--- a/client/src/assets/css/section/communityWrite.css
+++ b/client/src/assets/css/section/communityWrite.css
@@ -1,3 +1,369 @@
+/* [rank] 커뮤니티 인기글 */
+.commuSwiper {
+    margin-bottom: 1rem;
+}
+
+.commuSwiper .swiper-slide .rank_num {
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    left: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 0 0 10px 10px;
+    color: var(--white);
+    background-color: var(--dark);
+    border: 1px solid var(--white);
+}
+
+.commuSwiper .swiper-slide .rank_num.chart_in_color {
+    background-color: var(--main-color);
+}
+
+.commuSwiper .swiper-slide a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    border-radius: 10px;
+    border: 1px solid var(--line);
+    overflow: hidden;
+}
+
+.rank_img img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: scale(1.1);
+    transition: 0.4s ease;
+}
+
+.rank_img:hover img {
+    transform: scale(1);
+}
+
+.rank_info {
+    width: 105%;
+    height: 70px;
+    position: absolute;
+    z-index: 50;
+    background-color: var(--white);
+    bottom: 0;
+    left: 0;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.rank_text h3 {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    word-break: break-all;
+    font-size: 1.1rem;
+}
+
+.rank_reaction span {
+    display: inline-block;
+    font-size: .9rem;
+    color: var(--gray);
+}
+
+.rank_reaction span:first-child {
+    margin-right: 0.3rem;
+}
+
+/* 커뮤니티 최신글 */
+.post_grid {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    gap: 1.5rem;
+}
+
+.post_grid li {
+    border: 1px solid var(--line);
+    border-radius: 10px;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    transition: 0.4s ease;
+    width: auto;
+}
+
+.post_grid li a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.post_grid li:hover {
+    border: 1px solid var(--main-color);
+    color: var(--main-color);
+    transform: translateY(-5px);
+}
+
+.post_grid li img {
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    object-position: center -20px;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+}
+
+.post_grid li.isImg {
+    grid-row-end: span 3;
+}
+
+.post_grid li .post_title {
+    font-size: 1.1rem;
+    font-weight: 500;
+    margin-bottom: 0.7rem;
+}
+
+.post_grid li p {
+    font-size: 0.9rem;
+    color: var(--gray);
+    width: calc(100% - 1rem);
+    word-break: break-all;
+    margin-bottom: 1rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+@media (max-width: 1280px) {
+    .post_grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 880px) {
+    .post_grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 620px) {
+    .post_grid {
+        grid-template-columns: 1fr;
+    }
+}
+
+
+/* 커뮤니티 글 상세보기 */
+
+.page_info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 2rem 0;
+    padding: 1.5rem 1rem;
+    border-bottom: 1px solid var(--line);
+}
+
+.page_info .left .title {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.page_info .left .title span {
+    color: var(--main-color);
+}
+
+.page_info .left .auth {
+    font-size: 0.95rem;
+    display: flex;
+    align-items: center;
+}
+
+.page_info .left .auth .auth_profile {
+    width: 1.5rem;
+    height: 1.5rem;
+    background: var(--main-color);
+    border-radius: 1rem;
+    margin-right: 0.5rem;
+    font-size: 1rem;
+}
+
+.page_info .left .auth .post_date {
+    padding-left: 0.5rem;
+    margin-left: 0.5rem;
+    color: var(--gray);
+    font-weight: 200;
+    border-left: 1px solid var(--line);
+}
+
+.page_info .left .auth .post_view {
+    padding-left: 0.5rem;
+    margin-left: 0.5rem;
+    color: var(--gray);
+    font-weight: 200;
+    border-left: 1px solid var(--line);
+}
+
+.page_info .right {
+    padding: 1rem;
+}
+
+/* swiper */
+.detailSwiper {
+    padding: 2.5rem 0 2.5rem 0 !important;
+    margin-bottom: 2rem;
+}
+
+.detailSwiper .swiper-button-prev,
+.swiper-button-next {
+    color: var(--main-color) !important;
+}
+
+.detailSwiper {
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.detailSwiper .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: auto;
+}
+
+.detailSwiper .swiper-slide img {
+    display: block;
+    width: 100%;
+}
+
+/* contents */
+.page_contents p {
+    padding: 1rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    margin-bottom: 3rem;
+}
+
+.reaction_btn {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 3rem 0;
+}
+
+.reaction_btn button {
+    width: 4rem;
+    height: 4rem;
+    font-size: 1rem;
+    border-radius: 3rem;
+    background-color: var(--bright);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0.5rem;
+    color: var(--dark-gray);
+    transition: 0.2s ease;
+}
+
+.reaction_btn button:hover {
+    background-color: var(--sub-color);
+    color: var(--main-color);
+}
+
+/* reple */
+.reple_box {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.reple_box input {
+    width: 100%;
+    font-size: 1rem;
+    padding: 1rem;
+    border: 1px solid var(--line);
+    border-radius: 0.5rem;
+}
+
+.reple_box button {
+    width: 20%;
+    max-width: 150px;
+    font-size: 1rem;
+    padding: 1rem;
+    margin-left: 1rem;
+    border-radius: 10px;
+    color: var(--white);
+    background-color: var(--main-color);
+    transition: 0.2s ease;
+}
+
+.reple_box button:hover {
+    opacity: 0.8;
+}
+
+.reple_list {
+    width: 100%;
+    padding: 2rem 0;
+}
+
+.reple_list .reple {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    font-size: 1rem;
+    border-bottom: 1px solid var(--line);
+    margin-bottom: 0.5rem;
+}
+
+.reple_edit {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    background-color: transparent;
+}
+
+.reple_list .reple .reple_info {
+    margin-bottom: 0.8rem;
+    display: flex;
+    align-items: flex-end;
+}
+
+.reple_list .reple .reple_auth {
+    font-weight: 600;
+    margin-right: 0.5rem;
+}
+
+.reple_list .reple .reple_date {
+    font-size: 0.85rem;
+    color: var(--gray);
+    font-weight: 200;
+}
+
+
+/* 글 작성 */
 .CommuWrite__wrap {
     max-width: 1220px;
 }
@@ -22,11 +388,14 @@
     text-align: center;
 }
 
-.write__header span {
+.write__header button {
+    display: inline-block;
     font-size: 1rem;
+    background: none;
+    cursor: pointer;
 }
 
-.write__header span:first-child {
+.write__header button:first-child {
     margin-right: 15px;
 }
 
@@ -34,6 +403,7 @@
 .preImgBox__wrap {
     font-size: 0;
     position: relative;
+    margin-bottom: 75px;
 }
 
 .preImgBox__wrap .carousel {
@@ -81,6 +451,29 @@
 
 .carousel img:first-child {
     margin-left: 0;
+}
+
+.write__content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.write__content input {
+    width: 100%;
+    font-size: 1.8rem;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
+.write__content textarea {
+    width: 100%;
+    height: 7.2rem;
+    resize: none;
+    font-size: 1.2rem;
+    font-weight: 300;
+    overflow: auto;
 }
 
 @media screen and (max-width: 700px) {
