--- a/client/src/assets/css/section/communityWrite.css
+++ b/client/src/assets/css/section/communityWrite.css
@@ -364,6 +364,10 @@
 
 
 /* 글 작성 */
+.preImgBox__wrap {
+    width: 100%;
+}
+
 .CommuWrite__wrap {
     max-width: 1220px;
 }
@@ -373,7 +377,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 29px;
+    margin: 10px 0 15px;
 }
 
 .write__header svg {
@@ -399,60 +403,6 @@
     margin-right: 15px;
 }
 
-/*  */
-.preImgBox__wrap {
-    font-size: 0;
-    position: relative;
-    margin-bottom: 75px;
-}
-
-.preImgBox__wrap .carousel {
-    white-space: nowrap;
-    font-size: 0;
-    cursor: pointer;
-    overflow: hidden;
-    scroll-behavior: smooth;
-}
-
-.carousel .dragging {
-    cursor: grab;
-    scroll-behavior: auto;
-}
-
-.carousel .dragging img {
-    pointer-events: none;
-}
-
-.preImgBox__wrap svg {
-    background: var(--white);
-    border-radius: 50%;
-    display: block;
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.preImgBox__wrap svg:first-child {
-    display: none;
-    left: -13px;
-}
-
-.preImgBox__wrap svg:last-child {
-    right: -13px;
-}
-
-.carousel img {
-    width: calc(100% /5);
-    aspect-ratio: 1 / 1;
-    object-fit: cover;
-    margin-left: 15px;
-}
-
-.carousel img:first-child {
-    margin-left: 0;
-}
-
 .write__content {
     display: flex;
     flex-wrap: wrap;
@@ -461,29 +411,35 @@
 }
 
 .write__content input {
-    width: 100%;
-    font-size: 1.8rem;
+    width: 90%;
+    font-size: 2.2rem;
     font-weight: 400;
-    margin-bottom: 30px;
+    margin: 75px 0 30px;
 }
 
 .write__content textarea {
     width: 100%;
-    height: 7.2rem;
+    height: 10.2rem;
     resize: none;
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     font-weight: 300;
     overflow: auto;
 }
 
-@media screen and (max-width: 700px) {
-    .carousel img {
-        width: calc(100% /4);
+@media (max-width: 600px) {
+    .write__header h3 {
+        font-size: 1.5rem;
+    }
+
+    .write__content input {
+        font-size: 1.5rem;
+        margin: 30px 0 15px;
+    }
+
+    .write__content textarea {
+        font-size: 1.1rem;
+        height: 7.2rem;
     }
 }
 
-@media screen and (max-width: 450px) {
-    .carousel img {
-        width: calc(100% /3);
-    }
-}
+/* swiper */
