--- a/client/src/assets/css/section/mypage.css
+++ b/client/src/assets/css/section/mypage.css
@@ -90,6 +90,10 @@
     border-radius: 10px;
     background-color: #eeeeee;
   }
+  .photo_profile > img {
+    border-radius: 50%;
+    object-position: center;
+  }
   .profile_view .photo_profile {
     width: 100px;
     height: 100px;
