--- a/client/src/assets/css/section/mypage.css
+++ b/client/src/assets/css/section/mypage.css
@@ -101,6 +101,11 @@
     background-color: #eeeeee;
 }
 
+.photo_profile>img {
+    border-radius: 50%;
+    object-position: center;
+}
+
 .profile_view .photo_profile {
     width: 100px;
     height: 100px;
